Added MARTA API and searched for nearby buses and reset root

--- a/app/views/locations/new.html.erb
+++ b/app/views/locations/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New Location</h1>
+<h1>Welcome....Let us know where y'at?</h1>
+
+<p> Please provide us with your address or street corner, and we'll tell you how to hop on the nearest bus!</p>
 
 <%= render 'form' %>
 
