--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -1,24 +1,22 @@
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>Address:</strong>
-  <%= @location.address %>
-</p>
+<h2>You are currently standing at...</h2>
 
 <p>
-  <strong>City:</strong>
-  <%= @location.city %>
+  <%= @location.my_location %> 
 </p>
 
-<p>
-  <strong>Latitude:</strong>
-  <%= @location.latitude %>
-</p>
+<h2> The closest buses to you are....</h2>
+  <% if @bus_count == 0 %>
+    <p>...not really that close. Time to walk, bike, taxi, or Uber.</p>
+<% end %>
+<% @nearby_buses.each do |bus| %>
 
-<p>
-  <strong>Longitude:</strong>
-  <%= @location.longitude %>
-</p>
+<p> 
+  <strong>Route:</strong> <%= bus['ROUTE'] %><br> 
+  <strong>Bus Number:</strong> <%= bus['VEHICLE'] %><br>
+  <strong>Next Stop:</strong> <%= bus['TIMEPOINT'] %>
+  </p>
 
 <%= link_to 'Edit', edit_location_path(@location) %> |
 <%= link_to 'Back', locations_path %>
