Deleted scaffold, added bootstrap files to javascript and css

--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -18,5 +18,7 @@
   <strong>Next Stop:</strong> <%= bus['TIMEPOINT'] %>
   </p>
 
-<%= link_to 'Edit', edit_location_path(@location) %> |
-<%= link_to 'Back', locations_path %>
+ <% end %>
+ 
+<%= link_to 'New Search', edit_location_path(@location) %>
+
