--- a/app/views/locations/show.html.erb
+++ b/app/views/locations/show.html.erb
@@ -10,6 +10,9 @@
   <% if @bus_count == 0 %>
     <p>...not really that close. Time to walk, bike, taxi, or Uber.</p>
 <% end %>
+
+<div id="map-canvas" style="height:500px;width:500px;margin:0;padding:0;"></div>
+
 <% @nearby_buses.each do |bus| %>
 
 <p> 
@@ -20,5 +23,30 @@
 
  <% end %>
  
-<%= link_to 'New Search', edit_location_path(@location) %>
+<%= link_to 'Edit Search', edit_location_path(@location), class: "btn btn-success" %>
+<%= link_to 'New Search', new_location_path(@location) %>
+
+<!-- ====== Google Maps API Script ========= --->
+<!-- TODO: Make zoom level vary based on user's desired bus radius -->
+   <script type="text/javascript">
+     function initialize() {
+        var myLatLng = new google.maps.LatLng(<%= @location.latitude %>, <%= @location.longitude %>) 
+   
+       var mapOptions = {
+         center: myLatLng,
+         zoom: 15
+       };
+       var map = new google.maps.Map(document.getElementById('map-canvas'),
+           mapOptions);
+           
+        var userMarker = new google.maps.Marker ({ 
+            position: myLatLng,
+            map: map,
+            animation: google.maps.Animation.DROP,
+            title: "You Are Here"
+        });
+     }
+     
+     google.maps.event.addDomListener(window, 'load', initialize);
+   </script>
 
